# autoFetchStock

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  commit-message-formatter.skill  config.env.example  pyproject.toml  requirements.txt
.claude/: PROJECT_STATE.md  WORKFLOW_CONTEXT.md
.claude/agents/: design-architect.md  requirements-specialist.md  task-planner.md
.claude/commands/cc-sdd/: design.md  requirements.md  spec.md  start-task.md  task.md
commit-message-formatter/commit-message-formatter/: SKILL.md
design_handoff_autoFetchStock/: IMPLEMENTATION_PLAN.md
scripts/: find_api.py  find_js_api.py  test_old_kbars.py  test_otc_fetch.py  test_plotly_category.py  test_shioaji_kbars.py  test_shioaji_login.py  test_shioaji_market_data.py  update_event_timeline.py  update_rag_index.py
specs/: DESIGN.md  REQUIREMENTS.md  TASK.md
specs/history/: NEWS_GEMINI_PLAN.md  REQUIREMENTS.md  SHIOAJI_PLAN.md  TASK.md
src/: __init__.py  config.py  exceptions.py  main.py  models.py
src/app/: __init__.py  app_controller.py  callbacks.py  layout.py
src/app/assets/: drag_sort.js  style.css
src/data/: __init__.py  chips_kpi.py  fundamentals.py  market_indices.py  sectors.py  signals.py  spark.py
src/fetcher/: __init__.py  chips_fetcher.py  data_fetcher.py  index_fetcher.py  shioaji_fetcher.py  twse_parser.py
src/news/: __init__.py  news_anomaly.py  news_fetcher.py  news_models.py  news_processor.py  news_rag.py  news_summarizer.py
src/processor/: __init__.py  data_processor.py
src/renderer/: __init__.py  chart_colors.py  chart_renderer.py
src/scheduler/: __init__.py  scheduler.py
src/storage/: __init__.py  chips_storage.py  data_storage.py
tests/test_app/: test_favorites_sidebar.py  test_news_helpers.py  test_news_store_refresh.py
tests/test_data/: test_fundamentals.py
tests/test_fetcher/: test_realtime_quote_cache.py  test_shioaji_quote_handling.py  test_stock_search.py
tests/test_news/: conftest.py  test_news_anomaly.py  test_news_fetcher.py  test_news_models.py  test_news_processor.py  test_news_rag.py  test_news_summarizer.py  test_summarizer_aggregate.py
tests/test_processor/: test_intraday_data.py  test_intraday_volume.py
tests/test_storage/: test_news_history_storage.py
